# nQubitSimulator

./: README.md  plant.uml  pyproject.toml  requirements.txt  run_simulator.py  run_simulatorVisualBellState.py  simulator_notebook.ipynb
docs/: architecture.md  plant.uml  project_management.md  system_requirements.md  theory.md
src/nqubitsim/: __init__.py  gates.py  measurement.py  noise.py  simulator.py  state.py
tests/: run_tests.py  test_gates.py  test_simulator.py
