[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nqubitsim"
version = "0.1.0"
description = "n-qubit quantum simulator for coursework"
requires-python = ">=3.10"
dependencies = ["numpy>=1.26", "scipy>=1.11"]

[tool.pytest.ini_options]
pythonpath = ["src"]

